--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "axios": "^1.3.4",
+    "formik": "^2.2.9",
+    "react-hot-toast": "^2.4.0",
+    "react-router-dom": "6.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
