--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "private": true,
   "homepage": "https://SashaIlchenko.github.io/delivery-app/",
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.3",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
     "axios": "^1.3.4",
     "formik": "^2.2.9",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-hot-toast": "^2.4.0",
-    "react-router-dom": "6.4.1"
+    "react-icons": "^4.9.0",
+    "react-router-dom": "6.4.1",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
