--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@react-google-maps/api": "^2.18.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -13,11 +14,13 @@
     "formik": "^2.2.9",
     "nanoid": "^4.0.2",
     "react": "^18.1.0",
+    "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^18.1.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "6.4.1",
     "react-scripts": "5.0.1",
+    "use-places-autocomplete": "^4.0.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
